cambios en programa

--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@
             <p class="fs-2 parrafo__inicio"><span class="parrafo--modifier">Bienvenido!!</span> Este sitio web permite realizar calculos basicos a la hora de analizar o diseñar un circuito electrónico. Elija una de las siguientes opciones que aparecen a continuacion:</p>
 
         </div>
+        <h3 id="titulo_loader"class="text-center">Cargando...</h3>
+        <div  class="d-flex justify-content-center">
+          <div id="loader" class="spinner-border text-center" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+        <div  class="container menu">
+          <div id="menu" class="row row-cols-2">
 
-        <div id="menu" class="container menu">
-          
+          </div>
         </div>
         <div class="volver__inicio">
           <button id="historial" class="btn btn-primary">Historial de Calculos</button>
