cambios en programa

--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
             <span class="visually-hidden">Loading...</span>
           </div>
         </div>
-        <div  class="container menu">
-          <div id="menu" class="row row-cols-2">
-
-          </div>
+        <div id="menu" class="container menu">
+          
         </div>
         <div class="volver__inicio">
           <button id="historial" class="btn btn-primary">Historial de Calculos</button>
